feat: Add multiple user handling
